[package]
name = "lumination"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
serde_json = "1.0.140"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3.2"
nom = "8.0.0"
