[package]
name = "lumination"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/puffyCid/lumination"
description = "A very basic library to display network connections"
keywords = ["forensics"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
serde_json = "1.0.140"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", default-features = false, features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3.2"
nom = "8.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.174"
nom = "8.0.0"
